feat: introduce criteria grouping and hierarchical management for evaluation criteria